--- a/prj.conf
+++ b/prj.conf
@@ -1,2 +1,27 @@
+# BLE-related settings
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
+CONFIG_SETTINGS=y
+CONFIG_NVS=y
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_SETTINGS_NVS=y
+CONFIG_BT_SETTINGS=y
+
+# BLE connection power saving
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=100
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=2
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=100
+
+# Power saving
+CONFIG_PM_DEVICE=y
+# CONFIG_PM_DEVICE_RUNTIME=y
+
+# PWM
+CONFIG_PWM=y
+
+# Logging
+CONFIG_LOG=y
+CONFIG_LOG2_MODE_IMMEDIATE=y
+CONFIG_LOG_DEFAULT_LEVEL=4
