--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ cmake_minimum_required(VERSION 3.20.0)
 # create compile_commands.json for VS Code
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# set(BOARD nrf52840dongle_nrf52840)
 list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 set(BOARD wuerth_proteus-iii)
 
@@ -12,4 +11,6 @@ project(lh_device)
 
 target_sources(app PRIVATE
   src/main.c
+  src/ble.c
+  src/pwm.c
 )
