--- a/boards/arm/wuerth_proteus-iii/wuerth_proteus-iii.dts
+++ b/boards/arm/wuerth_proteus-iii/wuerth_proteus-iii.dts
@@ -17,12 +17,32 @@
 	};
 };
 
+&pinctrl {
+	uart0_default: uart0_default {
+		group1 {
+			psels = <NRF_PSEL(UART_TX, 1, 8)>;
+		};
+		group2 {
+			psels = <NRF_PSEL(UART_RX, 1, 9)>;
+		};
+	};
+	uart0_sleep: uart0_sleep {
+		group1 {
+			psels = <NRF_PSEL(UART_TX, 1, 8)>,
+					<NRF_PSEL(UART_RX, 1, 9)>;
+			low-power-enable;
+		};
+	};
+};
+
 &uart0 {
-	compatible = "nordic,nrf-uart";
 	current-speed = <115200>;
 	status = "okay";
-	tx-pin = <40>;
-	rx-pin = <41>;
+	pinctrl-0 = <&uart0_default>;
+	pinctrl-1 = <&uart0_sleep>;
+	pinctrl-names = "default", "sleep";
+	// tx-pin = <40>;
+	// rx-pin = <41>;
 };
 
 &flash0 {
