--- a/prj.conf
+++ b/prj.conf
@@ -7,12 +7,26 @@ CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_SETTINGS_NVS=y
 CONFIG_BT_SETTINGS=y
+# Zephyr controller
+CONFIG_BT_LL_SW_SPLIT=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y  # +8 dBm
+CONFIG_BT_SMP=y  # encryption support
 
 # BLE connection power saving
-CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
-CONFIG_BT_PERIPHERAL_PREF_MAX_INT=100
-CONFIG_BT_PERIPHERAL_PREF_LATENCY=2
-CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=100
+# CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
+# CONFIG_BT_PERIPHERAL_PREF_MAX_INT=100
+# CONFIG_BT_PERIPHERAL_PREF_LATENCY=2
+# CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=100
+
+# Sensors
+CONFIG_SENSOR=y
+CONFIG_TEMP_NRF5=y
+CONFIG_W1=y
+CONFIG_W1_NET=y
+CONFIG_DS18B20=y
+
+# ADC
+CONFIG_ADC=y
 
 # Power saving
 CONFIG_PM_DEVICE=y
@@ -21,7 +35,28 @@ CONFIG_PM_DEVICE=y
 # PWM
 CONFIG_PWM=y
 
+# Enable MCUBoot
+CONFIG_BOOTLOADER_MCUBOOT=y
+
+# OTA upgrades
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+CONFIG_MCUMGR=y
+CONFIG_MCUMGR_SMP_BT=y
+CONFIG_MCUMGR_CMD_OS_MGMT=y
+CONFIG_MCUMGR_CMD_IMG_MGMT=y
+CONFIG_MCUMGR_LOG_LEVEL_DBG=y
+
 # Logging
 CONFIG_LOG=y
 CONFIG_LOG2_MODE_IMMEDIATE=y
 CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_PWM_LOG_LEVEL_DBG=y
+
+# Debugging
+CONFIG_DEBUG_THREAD_INFO=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
+# CONFIG_CONSOLE=n
+# CONFIG_SHELL=y
+# CONFIG_BT_SHELL=y
+# CONFIG_SETTINGS_SHELL=y
+# CONFIG_SHELL_BACKEND_SERIAL=y
