Add fuel gauge and split source into multiple files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 set(BOARD wuerth_proteus-iii)
 
+list(APPEND ZEPHYR_EXTRA_MODULES
+  ${CMAKE_CURRENT_SOURCE_DIR}/modules/max17048
+)
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(lh_device)
 
@@ -13,4 +17,6 @@ target_sources(app PRIVATE
   src/main.c
   src/ble.c
   src/pwm.c
+  src/temp.c
+  src/adc.c
 )
