--- a/prj.conf
+++ b/prj.conf
@@ -7,6 +7,8 @@ CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_SETTINGS_NVS=y
 CONFIG_BT_SETTINGS=y
+# Generic Light Source (0x7C0)
+CONFIG_BT_DEVICE_APPEARANCE=1984
 # Zephyr controller
 CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y  # +8 dBm
@@ -20,10 +22,13 @@ CONFIG_BT_SMP=y  # encryption support
 
 # Sensors
 CONFIG_SENSOR=y
+CONFIG_BT_BAS=y
 CONFIG_TEMP_NRF5=y
 CONFIG_W1=y
 CONFIG_W1_NET=y
 CONFIG_DS18B20=y
+CONFIG_I2C=y
+CONFIG_MAX17048=y
 
 # ADC
 CONFIG_ADC=y
@@ -37,20 +42,30 @@ CONFIG_PWM=y
 
 # Enable MCUBoot
 CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_MCUBOOT_IMAGE_VERSION="1.0.0"
+CONFIG_MCUBOOT_UTIL_LOG_LEVEL_DBG=y
 
 # OTA upgrades
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 CONFIG_MCUMGR=y
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+# Allow for large Bluetooth data packets
+CONFIG_BT_L2CAP_TX_MTU=252
+CONFIG_BT_BUF_ACL_RX_SIZE=256
 CONFIG_MCUMGR_SMP_BT=y
+CONFIG_MCUMGR_SMP_BT_AUTHEN=n
 CONFIG_MCUMGR_CMD_OS_MGMT=y
+CONFIG_OS_MGMT_TASKSTAT=y
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
-CONFIG_MCUMGR_LOG_LEVEL_DBG=y
+CONFIG_STATS=y
+CONFIG_STATS_NAMES=y
+CONFIG_MCUMGR_CMD_STAT_MGMT=y
 
 # Logging
 CONFIG_LOG=y
 CONFIG_LOG2_MODE_IMMEDIATE=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 CONFIG_PWM_LOG_LEVEL_DBG=y
+# CONFIG_SENSOR_LOG_LEVEL_DBG=y
 
 # Debugging
 CONFIG_DEBUG_THREAD_INFO=y
@@ -60,3 +75,4 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 # CONFIG_BT_SHELL=y
 # CONFIG_SETTINGS_SHELL=y
 # CONFIG_SHELL_BACKEND_SERIAL=y
+# CONFIG_MCUMGR_SMP_SHELL=y
