--- a/prj.conf
+++ b/prj.conf
@@ -15,10 +15,10 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y  # +8 dBm
 CONFIG_BT_SMP=y  # encryption support
 
 # BLE connection power saving
-# CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
-# CONFIG_BT_PERIPHERAL_PREF_MAX_INT=100
-# CONFIG_BT_PERIPHERAL_PREF_LATENCY=2
-# CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=100
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=100
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=2
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=100
 
 # Sensors
 CONFIG_SENSOR=y
@@ -31,14 +31,16 @@ CONFIG_I2C=y
 CONFIG_MAX17048=y
 
 # ADC
-CONFIG_ADC=y
+# CONFIG_ADC=y
 
 # Power saving
 CONFIG_PM_DEVICE=y
 # CONFIG_PM_DEVICE_RUNTIME=y
 
 # PWM
-CONFIG_PWM=y
+# CONFIG_PWM=y
+CONFIG_NRFX_PWM=y
+CONFIG_NRFX_PWM0=y
 
 # Enable MCUBoot
 CONFIG_BOOTLOADER_MCUBOOT=y
@@ -51,8 +53,10 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 # Allow for large Bluetooth data packets
 CONFIG_BT_L2CAP_TX_MTU=252
 CONFIG_BT_BUF_ACL_RX_SIZE=256
+CONFIG_BT_BUF_ACL_TX_SIZE=256
 CONFIG_MCUMGR_SMP_BT=y
 CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+CONFIG_MCUMGR_SMP_BT_CONN_PARAM_CONTROL=y
 CONFIG_MCUMGR_CMD_OS_MGMT=y
 CONFIG_OS_MGMT_TASKSTAT=y
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
@@ -62,17 +66,31 @@ CONFIG_MCUMGR_CMD_STAT_MGMT=y
 
 # Logging
 CONFIG_LOG=y
-CONFIG_LOG2_MODE_IMMEDIATE=y
+# CONFIG_LOG2_MODE_IMMEDIATE=y
 CONFIG_LOG_DEFAULT_LEVEL=4
-CONFIG_PWM_LOG_LEVEL_DBG=y
-# CONFIG_SENSOR_LOG_LEVEL_DBG=y
+# CONFIG_PWM_LOG_LEVEL_DBG=y
+
+# Watchdog
+CONFIG_WATCHDOG=y
+# CONFIG_WDT_DISABLE_AT_BOOT=y
 
 # Debugging
 CONFIG_DEBUG_THREAD_INFO=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
-# CONFIG_CONSOLE=n
-# CONFIG_SHELL=y
-# CONFIG_BT_SHELL=y
-# CONFIG_SETTINGS_SHELL=y
-# CONFIG_SHELL_BACKEND_SERIAL=y
-# CONFIG_MCUMGR_SMP_SHELL=y
+CONFIG_SHELL=y
+CONFIG_BT_SHELL=y
+CONFIG_SETTINGS_SHELL=y
+CONFIG_MCUMGR_CMD_SHELL_MGMT=y
+CONFIG_SHELL_LOG_BACKEND=y
+# minimal shell config
+CONFIG_SHELL_MINIMAL=y
+CONFIG_DEVMEM_SHELL=y
+CONFIG_KERNEL_SHELL=y
+CONFIG_DEVICE_SHELL=y
+# extend buffers to avoid shell output truncation
+CONFIG_SHELL_BACKEND_DUMMY_BUF_SIZE=1500
+CONFIG_MCUMGR_BUF_SIZE=1532
+
+# RTT
+# CONFIG_USE_SEGGER_RTT=y
+# CONFIG_RTT_CONSOLE=y
