--- a/child_image/mcuboot/pm_static.yml
+++ b/child_image/mcuboot/pm_static.yml
@@ -1,8 +1,18 @@
 app:
   address: 0xc200
-  end_address: 0x85000
+  end_address: 0x82000
   region: flash_primary
-  size: 0x78e00
+  size: 0x75e00
+littlefs_storage:
+  address: 0xf8000
+  end_address: 0xfe000
+  placement:
+    align:
+      start: 0x1000
+    before:
+    - settings_storage
+  region: flash_primary
+  size: 0x6000
 mcuboot:
   address: 0x0
   end_address: 0xc000
@@ -21,25 +31,25 @@ mcuboot_pad:
   size: 0x200
 mcuboot_primary:
   address: 0xc000
-  end_address: 0x85000
+  end_address: 0x82000
   orig_span: &id001
   - app
   - mcuboot_pad
   region: flash_primary
   sharers: 0x1
-  size: 0x79000
+  size: 0x76000
   span: *id001
 mcuboot_primary_app:
   address: 0xc200
-  end_address: 0x85000
+  end_address: 0x82000
   orig_span: &id002
   - app
   region: flash_primary
-  size: 0x78e00
+  size: 0x75e00
   span: *id002
 mcuboot_secondary:
-  address: 0x85000
-  end_address: 0xfe000
+  address: 0x82000
+  end_address: 0xf8000
   placement:
     after:
     - mcuboot_primary
@@ -48,13 +58,11 @@ mcuboot_secondary:
   region: flash_primary
   share_size:
   - mcuboot_primary
-  size: 0x79000
+  size: 0x76000
 settings_storage:
   address: 0xfe000
   end_address: 0x100000
   placement:
-    align:
-      start: 0x1000
     before:
     - end
   region: flash_primary
