--- a/prj.conf
+++ b/prj.conf
@@ -18,7 +18,7 @@ CONFIG_BT_SMP=y  # encryption support
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=100
 CONFIG_BT_PERIPHERAL_PREF_LATENCY=2
-CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=100
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=500
 
 # Sensors
 CONFIG_SENSOR=y
@@ -35,10 +35,8 @@ CONFIG_MAX17048=y
 
 # Power saving
 CONFIG_PM_DEVICE=y
-# CONFIG_PM_DEVICE_RUNTIME=y
 
 # PWM
-# CONFIG_PWM=y
 CONFIG_NRFX_PWM=y
 CONFIG_NRFX_PWM0=y
 
@@ -53,7 +51,8 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 # Allow for large Bluetooth data packets
 CONFIG_BT_L2CAP_TX_MTU=252
 CONFIG_BT_BUF_ACL_RX_SIZE=256
-CONFIG_BT_BUF_ACL_TX_SIZE=256
+# workaround for https://github.com/zephyrproject-rtos/zephyr/issues/44998
+CONFIG_BT_L2CAP_TX_BUF_COUNT=128
 CONFIG_MCUMGR_SMP_BT=y
 CONFIG_MCUMGR_SMP_BT_AUTHEN=n
 CONFIG_MCUMGR_SMP_BT_CONN_PARAM_CONTROL=y
@@ -66,13 +65,21 @@ CONFIG_MCUMGR_CMD_STAT_MGMT=y
 
 # Logging
 CONFIG_LOG=y
-# CONFIG_LOG2_MODE_IMMEDIATE=y
-CONFIG_LOG_DEFAULT_LEVEL=4
-# CONFIG_PWM_LOG_LEVEL_DBG=y
+CONFIG_LOG_DEFAULT_LEVEL=2
+CONFIG_LOG_MAX_LEVEL=2
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+CONFIG_LOG_BACKEND_SHOW_COLOR=n
+CONFIG_LOG_BACKEND_FS=y
+CONFIG_LOG_BACKEND_FS_DIR="/lfs"
+# CONFIG_LOG_BACKEND_FS_FILES_LIMIT=2
+# CONFIG_LOG_BACKEND_FS_FILE_SIZE=3072
+CONFIG_MCUMGR_CMD_FS_MGMT=y
+CONFIG_HEAP_MEM_POOL_SIZE=16384
+CONFIG_FILE_SYSTEM_SHELL=y
 
 # Watchdog
 CONFIG_WATCHDOG=y
-# CONFIG_WDT_DISABLE_AT_BOOT=y
 
 # Debugging
 CONFIG_DEBUG_THREAD_INFO=y
@@ -81,12 +88,14 @@ CONFIG_SHELL=y
 CONFIG_BT_SHELL=y
 CONFIG_SETTINGS_SHELL=y
 CONFIG_MCUMGR_CMD_SHELL_MGMT=y
-CONFIG_SHELL_LOG_BACKEND=y
 # minimal shell config
 CONFIG_SHELL_MINIMAL=y
+CONFIG_SHELL_VT100_COMMANDS=n
 CONFIG_DEVMEM_SHELL=y
 CONFIG_KERNEL_SHELL=y
 CONFIG_DEVICE_SHELL=y
+CONFIG_SHELL_BACKEND_SERIAL=n
+CONFIG_SHELL_LOG_BACKEND=n
 # extend buffers to avoid shell output truncation
 CONFIG_SHELL_BACKEND_DUMMY_BUF_SIZE=1500
 CONFIG_MCUMGR_BUF_SIZE=1532
