--- a/prj.conf
+++ b/prj.conf
@@ -13,6 +13,7 @@ CONFIG_BT_DEVICE_APPEARANCE=1984
 CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y  # +8 dBm
 CONFIG_BT_SMP=y  # encryption support
+CONFIG_BT_MAX_CONN=2
 
 # BLE connection power saving
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
