--- a/prj.conf
+++ b/prj.conf
@@ -1,4 +1,5 @@
 # BLE-related settings
+CONFIG_BT_DEVICE_NAME="lh_device_1"
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_SETTINGS=y
@@ -43,7 +44,7 @@ CONFIG_NRFX_PWM0=y
 
 # Enable MCUBoot
 CONFIG_BOOTLOADER_MCUBOOT=y
-CONFIG_MCUBOOT_IMAGE_VERSION="1.0.0"
+CONFIG_MCUBOOT_IMAGE_VERSION="1.0.1"
 CONFIG_MCUBOOT_UTIL_LOG_LEVEL_DBG=y
 
 # OTA upgrades
