--- a/prj.conf
+++ b/prj.conf
@@ -27,7 +27,6 @@ CONFIG_SENSOR=y
 CONFIG_BT_BAS=y
 CONFIG_TEMP_NRF5=y
 CONFIG_W1=y
-CONFIG_W1_NET=y
 CONFIG_DS18B20=y
 CONFIG_I2C=y
 CONFIG_MAX17048=y
@@ -39,12 +38,11 @@ CONFIG_MAX17048=y
 CONFIG_PM_DEVICE=y
 
 # PWM
-CONFIG_NRFX_PWM=y
 CONFIG_NRFX_PWM0=y
 
 # Enable MCUBoot
 CONFIG_BOOTLOADER_MCUBOOT=y
-CONFIG_MCUBOOT_IMAGE_VERSION="1.0.1"
+CONFIG_MCUBOOT_IMAGE_VERSION="1.0.2"
 CONFIG_MCUBOOT_UTIL_LOG_LEVEL_DBG=y
 
 # OTA upgrades
@@ -100,7 +98,13 @@ CONFIG_SHELL_BACKEND_SERIAL=n
 CONFIG_SHELL_LOG_BACKEND=n
 # extend buffers to avoid shell output truncation
 CONFIG_SHELL_BACKEND_DUMMY_BUF_SIZE=1500
-CONFIG_MCUMGR_BUF_SIZE=1532
+# Enable the mcumgr Packet Reassembly feature over Bluetooth and its configuration dependencies.
+# MCUmgr buffer size is optimized to fit one SMP packet divided into five Bluetooth Write Commands,
+# transmitted with the maximum possible MTU value: 498 bytes.
+CONFIG_MCUMGR_SMP_REASSEMBLY_BT=y
+CONFIG_MCUMGR_BUF_SIZE=2475
+CONFIG_OS_MGMT_MCUMGR_PARAMS=y
+CONFIG_MCUMGR_SMP_WORKQUEUE_STACK_SIZE=4608
 
 # RTT
 # CONFIG_USE_SEGGER_RTT=y
