Various small changes
Decreased advertising interval
Make serial number a Kconfig option

--- a/prj.conf
+++ b/prj.conf
@@ -1,5 +1,9 @@
+# General settings
+CONFIG_SERIALNO=15
+# CONFIG_BT_CTLR_ADV_EXT=y
+
 # BLE-related settings
-CONFIG_BT_DEVICE_NAME="lh_device_1"
+CONFIG_BT_DEVICE_NAME="lh_device_15"
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_SETTINGS=y
@@ -14,7 +18,10 @@ CONFIG_BT_DEVICE_APPEARANCE=1984
 CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y  # +8 dBm
 CONFIG_BT_SMP=y  # encryption support
-CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_CONN=1
+CONFIG_BT_BONDABLE=n
+# workaround for https://github.com/zephyrproject-rtos/zephyr/issues/56197
+CONFIG_BT_LL_SW_LLCP_LEGACY=y
 
 # BLE connection power saving
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=80
@@ -72,8 +79,8 @@ CONFIG_FILE_SYSTEM_LITTLEFS=y
 CONFIG_LOG_BACKEND_SHOW_COLOR=n
 CONFIG_LOG_BACKEND_FS=y
 CONFIG_LOG_BACKEND_FS_DIR="/lfs"
-# CONFIG_LOG_BACKEND_FS_FILES_LIMIT=2
-# CONFIG_LOG_BACKEND_FS_FILE_SIZE=3072
+CONFIG_LOG_BACKEND_FS_FILES_LIMIT=3
+CONFIG_LOG_BACKEND_FS_FILE_SIZE=1024
 CONFIG_MCUMGR_CMD_FS_MGMT=y
 CONFIG_HEAP_MEM_POOL_SIZE=16384
 CONFIG_FILE_SYSTEM_SHELL=y
