--- a/prj.conf
+++ b/prj.conf
@@ -1,9 +1,9 @@
 # General settings
-CONFIG_SERIALNO=15
+CONFIG_SERIALNO=17
 # CONFIG_BT_CTLR_ADV_EXT=y
 
 # BLE-related settings
-CONFIG_BT_DEVICE_NAME="lh_device_15"
+CONFIG_BT_DEVICE_NAME="lh_device_17"
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_SETTINGS=y
@@ -74,6 +74,7 @@ CONFIG_MCUMGR_CMD_STAT_MGMT=y
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=2
 CONFIG_LOG_MAX_LEVEL=2
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=4096
 CONFIG_FILE_SYSTEM=y
 CONFIG_FILE_SYSTEM_LITTLEFS=y
 CONFIG_LOG_BACKEND_SHOW_COLOR=n
